--- a/index.html
+++ b/index.html
@@ -10,8 +10,32 @@
     <header>
         <nav>
             <h1 class="section-title">G3 Architect</h1>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact Us</li>
+                <li>Login</li>
+            </ul>
         </nav>
+
+        <section class="banner">
+            <h1 class="banner-title">
+                Brand New <br> Group of Architects 
+            </h1>
+            <p class="banner-description">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button class="btn-primary">Explore More</button>
+        </section>
+
+        <div class="banner-img">
+        <img src="images/banner.png" alt="" >
+        </div>
+        <br>
     </header>
+
+
+
     <main></main>
     <footer></footer>
 </body>
