--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="banner-title">
                 Brand New <br> Group of Architects 
             </h1>
-            <p class="banner-description">
+            <p class="section-description">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
             </p>
             <button class="btn-primary">Explore More</button>
@@ -36,7 +36,31 @@
 
 
 
-    <main></main>
+    <main>
+        <section class="team">
+            <div class="team-container">
+                <div class="team-img">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+
+                <div class="team-info">
+                    <h1 class="team-header">
+                        Quick list <span class="team-our">of Our</span> <br> <span class="team-feature">Features</span>
+                    </h1>
+                    <p class="section-description">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    </p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+
     <footer></footer>
 </body>
 </html>
