sponser section created

--- a/index.html
+++ b/index.html
@@ -170,6 +170,28 @@
                 </div>
             </div>
         </section>
+        <!-- fact section ends  -->
+
+        <section class="sponsors">
+            <div class="sponsor-container">
+                
+                <div class="sponsor-info">
+                    <h1 class="section-title">Our Sponsors</h1>
+                    <p class="section-description">
+                        There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.
+                    </p>
+                </div>
+
+                <div class="sponsor-img">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+
+            </div>
+        </section>
     </main>
 
 
