finished footer section

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         </section>
         <!-- fact section ends  -->
 
+        <!-- sponsor section starts  -->
         <section class="sponsors">
             <div class="sponsor-container">
                 
@@ -192,9 +193,14 @@
 
             </div>
         </section>
+        <!-- sponsor section ends  -->
     </main>
 
 
-    <footer></footer>
+    <footer>
+        <p class="section-description">
+            All rights reserved copyright@2023 startup landing page design
+        </p>
+    </footer>
 </body>
 </html>
